--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2566,107 +2566,107 @@ stories:
   domain: http://www.dispatch.com/
   link: https://www.douglasdispatch.com/national/sports/why-matt-nagy-s-affinity-for-trick-plays-matters/article_1a2d6dce-6b63-57e9-845c-bbcda54889f2.html
 images:
-- name: white-house-lawn-white-house-lawn-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-pond.jpg
-- name: window-window-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crafty-painting.jpg
-- name: crow_atari_asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_atari_asteroids.jpg
-- name: beach-rocks-beach-rocks-currents-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-post-modern.jpg
-- name: downtown-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-granite.jpg
-- name: paris-paris-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-umberto-bocc.jpg
-- name: abandonedbuildings_dark_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_dali.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
-- name: oldhousecars-house-old-cars-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-space-pizza.jpg
-- name: aws-s3-stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-barn.jpg
-- name: window-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: oldtrain-oldtrain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-rainbow-festival.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-deep-connections.JPG
-- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-- name: containership-containership-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-really-hot.jpg
-- name: oldsmallboat-oldsmallboat-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-monet-one.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit.jpg
-- name: abe-lincoln-one-post-modern-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-07-91.jpg
-- name: mistywoods-babyfoot-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-granite.jpg
-- name: store-on-corner-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
-- name: white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: beach-clouds-lifeguard-beachclouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-wols.jpg
-- name: adam-smith-adam-smith-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-light-dali.jpg
-- name: abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
-- name: aws-s3-dunes-dunes-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-1200.jpg
-- name: meadowbutterfly-meadow-butterfly-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-two.jpg
-- name: oldhousecars-house-old-cars-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-hot-spicy.jpg
-- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-- name: hollywood-building-hollywood-building-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kand-two.jpg
-- name: stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: walled-garden-walled-garden-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-bright-sand.jpg
-- name: dc-statue-dcstatue-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purp-paper.jpg
-- name: supreme-court-supremecourt-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-deep-connections.jpg
-- name: yosemite-yosemite-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-clean-view.jpg
-- name: downtown-trucksilo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-pond.jpg
-- name: art-museum-art-museum-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-alberto-giacometti.jpg
-- name: old-school-house-old-schoolhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alberto-giacometti.jpg
-- name: amusement-park-amusement-park-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-rainbow-festival.jpg
-- name: legal-statue-legalstatue-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-marcel-duchamp.jpg
-- name: eduardo-eduardo-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
-- name: razorcliff-razorcliff-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-neo-instinct.jpg
-- name: border-crossing-bordercrossing-blue-electricity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-electricity.png
-- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-- name: downtown-los-angeles-downtown-la-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
-- name: machine-road-machine-road-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-aqua.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
-- name: crow_umberto_bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_umberto_bocc.jpg
+- name: eduardo-eduardo-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gred-mash.jpg
+- name: oldtrain-oldtrain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
+- name: death-valley-death-valley-national-park-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-rainbow-festival.jpg
+- name: aws-s3-stories-ellis-island-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellis-island-nazi-poster.jpg
+- name: oldtrain-oldtrain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alien-goggles.jpg
+- name: power-lines-power-lines-empty-space-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-marcel-duchamp.jpg
+- name: miamibeach-miamibeach-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purple-storm.jpg
+- name: aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+- name: miamibeach-miamibeach-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
+- name: walled-garden-walled-garden-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-oily-mcoilface.jpg
+- name: oldroad-old-road-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-soul.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: machine-road-machine-road-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-post-modern.jpg
+- name: sand-hand-sand-hand-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-cinnamon-rolls.jpg
+- name: white-house-whitehouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-graham-sutherland.jpg
+- name: oldcabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-kandinsky-bv.jpg
+- name: legal-statue-legalstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-rain.jpg
+- name: catacombs-catacombs-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crunch-paper.jpg
+- name: white-house-lawn-white-house-lawn-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-internet-numbers.jpg
+- name: amusement-park-amusement-park-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-bright-sand.jpg
+- name: downtown-trucksilo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smoking-cigarette.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
+- name: yuma-bank-yuma-bak-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-creativity.jpg
+- name: stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
+- name: christianity-christianity-under-construction-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
+- name: old-cabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
+- name: store-on-corner-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-green-zuma.jpg
+- name: copper-circuit-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7788.jpg
+- name: machine-road-machine-road-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
+- name: scream-IMG_E3643.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
+- name: white-house-whitehouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-three.jpg
+- name: window-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
+- name: abandonedbuildings_internet_numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_internet_numbers.jpg
+- name: ellis-island-ellis-island-room-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
+- name: border-fence-border-fence-on-hill-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-marcel-duchamp.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+- name: old-church-oldchurch-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-graham-sutherland.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o.jpg
+- name: old-church-oldchurch-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
+- name: birdhouse-birdhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
+- name: oldcabin-oldcabin-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-neo-instinct.jpg
+- name: ellis-island-ellisisland-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
+- name: oldroad-old-road-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-green-zuma.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: wind-mills-windmills-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-gred-mash.jpg
+- name: birdhouse-birdhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
+- name: fence-mexico-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-neo-instinct.jpg
+- name: downtown-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-brush.jpg
+- name: oldsmallboat-oldsmallboat-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-matrix.jpg
 ---
 Shay Mitchell's Feet Balloon To Double The Size.&nbsp;With Consolidation, Delay Will Just Add To The Pain.&nbsp;Lawyers Respond To Obamacare Hearing.&nbsp;Commissioners Clash With Haley.&nbsp;Brooklyn Beckham Struggling With 'basic Tasks' On Internship.&nbsp;How The Trucking Industry Is Changing With The Times.&nbsp;Epstein Story Shows Investigative Journalism Is Thriving.&nbsp;Does Apple Make The Best Phone?.&nbsp;
